--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
   
   <nav class="navbar">
     <ul>
-      <li class="nav-tp"><a href="#about">about</a></li>
-      <li class="nav-tp"><a href="#attractions">attractions</a></li>
-      <li class="nav-tp"><a href="#">something</a></li>
-      <li class="nav-tp"><a href="#">another thing</a></li>
+      <li><a href="#about">about</a></li>
+      <li><a href="#attractions">attractions</a></li>
+      <li><a href="#welcome">LOgo</a></li>
+      <li><a href="#food">food</a></li>
+      <li><a href="#">another thing</a></li>
     </ul>
   </nav>
-  <div class="welcome">
+  <div class="welcome" id="welcome">
     <h1 id="logo">Hello Uthai</h1>
   </div>
 
@@ -41,24 +42,13 @@
 
   <div class="container-fulid" id="attractions">
     <h1>attractions</h1>
-    <div class="row">
-      <div class="col">
-        <img src="pic/pic1.jpg" alt="" class="img">
-      </div>
-      <div class="col">
-        <img src="pic/pic2.jpg" alt="" class="img">
-      </div>
-
-      <div class="w-100"></div>
-
-      <div class="col">
-        <img src="pic/pic3.jpg" alt="" class="img">
-      </div>
-      <div class="col">
-        <img src="pic/pic4.jpg" alt="" class="img">
-      </div>
-    </div>
+    
   </div>
+
+  <div class="container-fluid" id="food">
+    
+  </div>
+
 <!-- 
   <div class="footer">
     <h1>This is a Footer get it?</h1>
@@ -72,11 +62,13 @@
 
 
 
-  <!-- Optional JavaScript -->
-  <script src="js/markup.js"></script>
+  
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+  <!-- Optional JavaScript -->
+  <script src="js/markup.js"></script>
 </body>
 </html>
