--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     </ul>
   </nav>
   <div class="welcome" id="welcome">
-    <h1 id="logo">Hello Uthai-thani</h1>
+    <video autoplay mute loop src="video/Top_Highway.mp4" id="video-bg"></video>
+    <h1 id="logo">Hello Uthai-Thani</h1>
 
     <h3 id="text-start">scroll down</h3>
   </div>
@@ -50,8 +51,9 @@
       <!-- attraction1 -->
       <div class="col attraction-img" id="place1">
        <div class="att-img">
-         
+        
        </div>
+       <p id="more-info">More info</p>
       </div>
       <!-- attraction2 -->
       <div class="col attraction-img" id="place2">
@@ -83,6 +85,6 @@
 
   <!-- Optional JavaScript -->
   <script src="js/markup.js"></script>
-  <script src="js/smooth-scrolling.js"></script>
+  
 </body>
 </html>
