fix card and smooth scrolling

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
+  <!-- Google icon-->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
   <link rel="stylesheet" href="css/index.css">
   <title> Uthai thani </title>
 </head>
@@ -27,8 +30,10 @@
   <div class="welcome" id="welcome">
     <video autoplay mute loop src="video/uthai.mp4" id="video-bg"></video>
     <h1 id="logo">Hello Uthai-Thani</h1>
-
+    <a href="#about">
+    <i class="material-icons" id="expand_icon">expand_more</i>
     <h3 id="text-start">scroll down</h3>
+    </a>
   </div>
 
   <div class="container-fulid" id="about">
@@ -54,7 +59,11 @@
         <img src="pic/หุบป่าตาด1.jpg" alt="">
         <div id="description">
           <h1>Wat par tark</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae neque quo illum consectetur fugiat dicta qui ullam, obcaecati hic ratione officia enim unde optio omnis incidunt facilis at eveniet, tempora.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae neque quo illum consectetur fugiat dicta qui ullam, obcaecati hic ratione officia enim unde optio omnis incidunt facilis at eveniet, tempora.
+          <br>
+          <button class="button button5">More info</button>
+        </p>
+
         </div>
       </div>
     </div>
@@ -71,9 +80,9 @@
     <!-- attraction3 -->
     <div class="col attraction-div" id="place3">
       <div class="att-img3">
-        <img src="pic/ห้วยขาแข้ง.jpg" alt="">
+        <img src="pic/ห้วยขาแข้ง2.jpg" alt="">
         <div id="description3">
-          <h1>Wat tha song</h1>
+          <h1>kha kang</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae neque quo illum consectetur fugiat dicta qui ullam, obcaecati hic ratione officia enim unde optio omnis incidunt facilis at eveniet, tempora.</p>
         </div>
       </div>
