add some content

--- a/index.html
+++ b/index.html
@@ -18,15 +18,16 @@
 
   <nav class="navbar">
     <ul>
-      <li><a href="#about">about</a></li>
-      <li><a href="#attractions">attractions</a></li>
+      <li><a href="#about">เรื่องทั่วไป</a></li>
+      <li><a href="#attractions">สถานที่ท่องเที่ยว</a></li>
       <li><a href="#welcome" id="Logo-view">
         <img src="pic/logo.png" alt="logo" id="Logo">
       </a></li>
-      <li><a href="#food">food</a></li>
-      <li><a href="#">another thing</a></li>
+      <li><a href="#food">ของฝาก</a></li>
+      <li><a href="#">ติดต่อ</a></li>
     </ul>
   </nav>
+
   <div class="welcome" id="welcome">
     <video autoplay mute loop src="video/uthai.mp4" id="video-bg"></video>
     <h1 id="logo">Hello Uthai-Thani</h1>
@@ -38,30 +39,32 @@
 
   <div class="container-fulid" id="about">
     <div class="row">
-      <div class="col" id="view1">
-      </div>
-
       <div class="col" id="view2">
-        <h1>About</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime necessitatibus magni mollitia ipsum, fuga nemo animi, eos reprehenderit consequuntur sunt. Fugit sequi cupiditate, molestias qui excepturi officiis, sit nesciunt optio.</p>
-
+        <h1>เรื่องทั่วไป</h1>
+        <p>ดินแดนบางส่วนพบหลักฐานว่าเคยเป็นถิ่นที่อยู่อาศัยของมนุษย์ก่อนประวัติศาสตร์และเป็นที่ตั้งของเมือง โบราณ หลายเมืองในสมัยทวารวดี ตามตำนานกล่าวว่าในสมัยสุโขทัย
+          ท้าวมหาพรหมได้เข้ามาสร้างเมืองที่บ้านอุทัยเก่า (อำเภอหนองฉาง) แล้วพาคนไทยมาอยู่ท่ามกลางหมู่บ้านกะเหรี่ยงและหมู่บ้านมอญ จึงเรียกว่า
+          “เมืองอู่ไทย”ตาม กลุ่มหรือที่อยู่ของคนไทย ต่อมาเกิดน้ำแล้งกระแสน้ำเปลี่ยนทาง เมืองจึงถูกทิ้งร้าง ในสมัยกรุงศรีอยุธยาชาว กะเหรี่ยงชื่อ
+          “พะตะเบิด” เข้ามาปรับปรุงเมืองอู่ไทย โดยขุดทะเลสาบขังน้ำไว้ใกล้เมืองและเป็นผู้ปกครองเมือง อู่ไทยคนแรก ชื่อเมือง จึงเรียกเพี้ยนเป็น
+          “เมืองอุไทย” ตามสำเนียงชาวกะเหรี่ยงและ มีฐานะเป็นหัวเมืองหน้า ด่านชั้นนอกในการสกัดกั้นกองทัพพม่าที่จะเข้ามาตีกรุงศรีอยุธยา
+          ต่อมาในสมัยกรุงรัตนโกสินทร์ตอนต้นมีการ อพยพผู้คน มาตั้งบ้านเรือนที่ริมฝั่งแม่น้ำสะแกกรังมากขึ้น และได้กลายเป็นที่ตั้งของตัวเมืองอุทัยธานีในปัจจุบัน
+          อุทัยธานีมีสถานที่น่าสนใจทางธรรมชาติ ประวัติศาสตร์ และโบราณคดีหลายแห่งที่น่าเที่ยวชมและศึกษาหาความรู้</p>
       </div>
     </div>
   </div>
 
 
   <div class="container-fulid" id="attractions">
-    <h1>attractions</h1>
+    <h1>สถานที่ท่องเที่ยว</h1>
     <div class="row" id="mapping">
       <!-- attraction1 -->
       <div class="col attraction-div" id="place1">
        <div class="att-img">
         <img src="pic/หุบป่าตาด1.jpg" alt="">
         <div id="description">
-          <h1>Wat par tark</h1>
+          <h1>หุบป่าตาด</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae neque quo illum consectetur fugiat dicta qui ullam, obcaecati hic ratione officia enim unde optio omnis incidunt facilis at eveniet, tempora.
           <br>
-          <button class="button button5">More info</button>
+          <button class="button button5">อ่านเพิ่มเติม</button>
         </p>
 
         </div>
@@ -72,8 +75,11 @@
       <div class="att-img2">
         <img src="pic/วัดท่าซุง.jpeg" alt="">
         <div id="description2">
-          <h1>Wat tha song</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae neque quo illum consectetur fugiat dicta qui ullam, obcaecati hic ratione officia enim unde optio omnis incidunt facilis at eveniet, tempora.</p>
+          <h1>วัดท่าซุง</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae neque quo illum consectetur fugiat dicta qui ullam, obcaecati hic ratione officia enim unde optio omnis incidunt facilis at eveniet, tempora.
+            <br>
+            <button class="button button5">อ่านเพิ่มเติม</button>
+          </p>
         </div>
       </div>
     </div>
@@ -82,8 +88,11 @@
       <div class="att-img3">
         <img src="pic/ห้วยขาแข้ง2.jpg" alt="">
         <div id="description3">
-          <h1>kha kang</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae neque quo illum consectetur fugiat dicta qui ullam, obcaecati hic ratione officia enim unde optio omnis incidunt facilis at eveniet, tempora.</p>
+          <h1>ห้วยขาแข้ง</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae neque quo illum consectetur fugiat dicta qui ullam, obcaecati hic ratione officia enim unde optio omnis incidunt facilis at eveniet, tempora.
+            <br>
+            <button class="button button5">อ่านเพิ่มเติม</button>
+          </p>
         </div>
       </div>
     </div>
