--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </nav>
 
   <div class="welcome" id="welcome">
-    <video autoplay mute loop src="video/uthai.mp4" id="video-bg"></video>
+    <video autoplay mute loop src="video/อุทัย.mp4" id="video-bg"></video>
     <h1 id="logo">Hello Uthai-Thani</h1>
     <a href="#about">
     <i class="material-icons" id="expand_icon">expand_more</i>
@@ -59,12 +59,15 @@
       <!-- attraction1 -->
       <div class="col attraction-div" id="place1">
        <div class="att-img">
-        <img src="pic/หุบป่าตาด1.jpg" alt="">
+        <img src="pic/ถ้ำพุหวาย.jpg" alt="">
         <div id="description">
-          <h1>หุบป่าตาด</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae neque quo illum consectetur fugiat dicta qui ullam, obcaecati hic ratione officia enim unde optio omnis incidunt facilis at eveniet, tempora.
+          <h1>ถ้ำพุหวาย</h1>
+          <p>&emsp;ถ้ำพุหวายเป็นอีกหนึ่งสถานที่ท่องเที่ยวที่ตั้งอยู่ในเขตวนอุทยานถ้ำเขาวง
+            ถ้ำนี้มีชื่อเสียงในเรื่องของหินงอกหินย้อยที่สวยงามมาก
+            และค้างคาวที่อาศัยอยู่ในถ้ำก็มีทั้งหมดถึง
+            9 ชนิดด้วยกันซึ่งถือได้ว่าเกือบจะเยอะที่สุดในประเทศไทยอีกด้วย
           <br>
-          <a href="attractions/hubpratak.html" target="_self" id="jump-n-go">
+          <a href="attractions/Phuwaicave.html" target="_self" id="jump-n-go">
             <button class="button button5">อ่านเพิ่มเติม</button>
           </a>
         </p>
@@ -78,9 +81,12 @@
         <img src="pic/วัดท่าซุง.jpeg" alt="">
         <div id="description2">
           <h1>วัดท่าซุง</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae neque quo illum consectetur fugiat dicta qui ullam, obcaecati hic ratione officia enim unde optio omnis incidunt facilis at eveniet, tempora.
+          <p>&emsp;วัดท่าซุง ซึ่งวัดแห่งนี้เป็นที่เลื่องชื่อในด้านความงดงาม ด้วยเอกลักษณ์อันโดดเด่นของ “วิหารแก้ว 100 เมตร” ที่ตกแต่งด้วยโมเสกแก้วเล็กๆทั้งวิหาร
+             ทำให้ดูแวววับจับตา วิจิตรงดงามยิ่งนัก ภายในวิหารแก้วนี้ มีโลงบรรจุองค์หลวงพ่อฤาษีลิงดำซึ่งชาวอุทัยธานีเคารพนับถือกันมานาน
             <br>
-            <button class="button button5">อ่านเพิ่มเติม</button>
+            <a href="attractions/watThasung.html">
+              <button class="button button5">อ่านเพิ่มเติม</button>
+            </a>
           </p>
         </div>
       </div>
@@ -88,12 +94,15 @@
     <!-- attraction3 -->
     <div class="col attraction-div" id="place3">
       <div class="att-img3">
-        <img src="pic/ห้วยขาแข้ง2.jpg" alt="">
+        <img src="pic/วัดถ้ำเขาวง.jpg" alt="">
         <div id="description3">
-          <h1>ห้วยขาแข้ง</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae neque quo illum consectetur fugiat dicta qui ullam, obcaecati hic ratione officia enim unde optio omnis incidunt facilis at eveniet, tempora.
+          <h1>วัดถ้ำเขาวง</h1>
+          <p>&emsp;วัดแห่งนี้เป็นอาคาร 4 ชั้น ออกแบบลักษณะเรือนไทย ยกใต้ถุน แบ่งสัดส่วนการใช้งานเป็น 4 ส่วน
+            มีความงดงามมาก บริเวณโดยรอบก็มีการจัดภูมิทัศน์ให้สวยงาม ร่มรื่น
             <br>
-            <button class="button button5">อ่านเพิ่มเติม</button>
+            <a href="attractions/watKhaowong.html">
+              <button class="button button5">อ่านเพิ่มเติม</button>
+            </a>
           </p>
         </div>
       </div>
