--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   <div class="welcome" id="welcome">
     <video autoplay mute loop src="video/อุทัย.mp4" id="video-bg"></video>
-    <h1 id="logo">Hello Uthai-Thani</h1>
+    <h1 id="logo">สวัสดีเมืองอุทัย</h1>
     <a href="#about">
     <i class="material-icons" id="expand_icon">expand_more</i>
     <h3 id="text-start">scroll down</h3>
