--- a/attractions/Phuwaicave.html
+++ b/attractions/Phuwaicave.html
@@ -11,7 +11,8 @@
 
   <!-- Google icon-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <title>Document</title>
+
+  <title>ถ้ำพุหวาย</title>
 
 </head>
 <body>
@@ -20,16 +21,34 @@
     <div class="parallax"></div>
   </div>
   <div class="information">
-  <h1>แนะนำสถานที่</h1>
-  <p>&emsp;ถ้ำพุหวาย ตั้งอยู่ในเขตอุทยานแห่งชาติพุเตย เคยใช้เป็นสถานที่ถ่ายทำละครนาคี
-ภายในถ้ำจะพบภูเขาหินปูนสูงชันสลับซับซ้อน หินงอกหินย้อย หลากหลายแบบ อาทิ หินดอกเห็ด, หินย้อย,
-เสาโรมัน, ดอกไม้หิน, หินรูปหัวปลาโลมา,หินเกร็ดเพชร, หินงอกดอกกุหลาบ
-เป็นต้น อีกทั้งยังมีค้างคาวอาศัยอยู่ถึง 9 ชนิด และ พระพุทธรูป ที่ชาวบ้านและนักท่องเที่ยวเข้ามากราบไหว้
-</p>
-<p>&emsp;ทางด้านหลังของถ้ำพุหวาย คือ ถ้ำเทพมาลี หรือ
-ถ้ำพญานาค เป็นถ้ำขนาดเล็กค่อนข้างลึกมีความสวยงามตามธรรมชาติของหินงอกหินย้อย
-หากเดินขึ้นไปยัง ยอดเขาพุหวาย สูงกว่า 700 เมตรจากระดับน้ำทะเล
-จะสามารถมองเห็นทัศนียภาพที่กว้างไกลอย่างสวยงาม บนสันเขามีสภาพเป็นป่าเต็งรังที่ค่อนข้างสมบูรณ์</p>
+    <h1>แนะนำสถานที่</h1>
+    <div class="row">
+      <div class="col">
+        <p>&emsp;ถ้ำพุหวาย ตั้งอยู่ในเขตอุทยานแห่งชาติพุเตย เคยใช้เป็นสถานที่ถ่ายทำละครนาคี
+      ภายในถ้ำจะพบภูเขาหินปูนสูงชันสลับซับซ้อน หินงอกหินย้อย หลากหลายแบบ อาทิ หินดอกเห็ด, หินย้อย,
+      เสาโรมัน, ดอกไม้หิน, หินรูปหัวปลาโลมา,หินเกร็ดเพชร, หินงอกดอกกุหลาบ
+      เป็นต้น อีกทั้งยังมีค้างคาวอาศัยอยู่ถึง 9 ชนิด และ พระพุทธรูป ที่ชาวบ้านและนักท่องเที่ยวเข้ามากราบไหว้
+      </p>
+      </div>
+      <div class="col">
+        <img src="../pic/ถ้ำพุหวาย2.jpg" alt="ถ้ำพุหวาย">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+
+      </div>
+      <div class="col">
+        <p>&emsp;ทางด้านหลังของถ้ำพุหวาย คือ ถ้ำเทพมาลี หรือ
+      ถ้ำพญานาค เป็นถ้ำขนาดเล็กค่อนข้างลึกมีความสวยงามตามธรรมชาติของหินงอกหินย้อย
+      หากเดินขึ้นไปยัง ยอดเขาพุหวาย สูงกว่า 700 เมตรจากระดับน้ำทะเล
+      จะสามารถมองเห็นทัศนียภาพที่กว้างไกลอย่างสวยงาม บนสันเขามีสภาพเป็นป่าเต็งรังที่ค่อนข้างสมบูรณ์</p>
+    </div>
+    </div>
+
+
+
+
   </div>
 
 <div class="map-frame">
