--- a/attractions/watKhaowong.html
+++ b/attractions/watKhaowong.html
@@ -11,6 +11,10 @@
 
   <!-- Google icon-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  <!-- google font -->
+  <link href="https://fonts.googleapis.com/css?family=Sriracha" rel="stylesheet">
+  
   <title>Document</title>
 
 </head>
