--- a/attractions/watThasung.html
+++ b/attractions/watThasung.html
@@ -11,6 +11,10 @@
 
   <!-- Google icon-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  <!-- google font -->
+  <link href="https://fonts.googleapis.com/css?family=Sriracha" rel="stylesheet">
+
   <title>Document</title>
 
 </head>
@@ -20,17 +24,34 @@
     <div class="parallax2"></div>
   </div>
   <div class="information">
-  <h1>แนะนำสถานที่</h1>
-  <p>&emsp;วัดท่าซุง หรือ วัดจันทาราม จ.อุทัยธานี ชาวบ้านหรือแม้แต่คนอย่างเราๆก็มักจะเรียกติดปากว่า วัดท่าซุง
-    ซึ่งวัดแห่งนี้เป็นที่เลื่องชื่อในด้านความงดงาม ด้วยเอกลักษณ์อันโดดเด่นของ “วิหารแก้ว 100 เมตร” ที่ตกแต่งด้วยโมเสกแก้วเล็กๆทั้งวิหาร ทำให้ดูแวววับจับตา
-    วิจิตรงดงามยิ่งนัก ภายในวิหารแก้วนี้ มีโลงบรรจุองค์หลวงพ่อฤาษีลิงดำซึ่งชาวอุทัยธานีเคารพนับถือกันมานาน
-  </p>
-    <img src="../pic/วิหารแก้ว 100 เมตร.jpg" alt="วิหารแก้ว 100 เมตร" class="center" style="width:1080px;height:auto;">
-  <p>
-    &emsp;ถัดมาอีกหน่อยแต่ยังอยู่ภายในบริเวณวัดท่าซุงนี้ จะพบ ปราสาททองคำ (กาญจนาภิเษก)  ก่อสร้างด้วยการก่ออิฐฉาบปูน ประดับลวดลายไทยปิดทองคำเปลวติดกระจก ใช้เป็นสถานที่ประดิษฐานพระพุทธรูปที่ญาติโยมถวาย รอบนอกปราสาทใช้ทองคำเปลวปิดรอบปราสาท
-     ซึ่งภายในบริเวณใก้ลเคียงนี้ยังมี พิพิธภัณฑ์   “สมบัติพ่อให้” อยู่ตรงข้ามกับ ปราสาททองคำ
-   </p>
-   <img src="../pic/ปราสาททองคำ (กาญจนาภิเษก).jpg" alt="ปราสาททองคำ (กาญจนาภิเษก)" class="center" style="width:1080px;height:auto;">
+    <h1>แนะนำสถานที่</h1>
+    <div class="row">
+      <div class="col">
+        <p>&emsp;วัดท่าซุง หรือ วัดจันทาราม จ.อุทัยธานี ชาวบ้านหรือแม้แต่คนอย่างเราๆก็มักจะเรียกติดปากว่า วัดท่าซุง
+          ซึ่งวัดแห่งนี้เป็นที่เลื่องชื่อในด้านความงดงาม ด้วยเอกลักษณ์อันโดดเด่นของ “วิหารแก้ว 100 เมตร” ที่ตกแต่งด้วยโมเสกแก้วเล็กๆทั้งวิหาร ทำให้ดูแวววับจับตา
+          วิจิตรงดงามยิ่งนัก ภายในวิหารแก้วนี้ มีโลงบรรจุองค์หลวงพ่อฤาษีลิงดำซึ่งชาวอุทัยธานีเคารพนับถือกันมานาน
+        </p>
+      </div>
+      <div class="col">
+        <img src="../pic/วิหารแก้ว 100 เมตร.jpg" alt="วิหารแก้ว 100 เมตร" class="center" style="width:1080px;height:auto;">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <img src="../pic/ปราสาททองคำ (กาญจนาภิเษก).jpg" alt="ปราสาททองคำ (กาญจนาภิเษก)" class="center" style="width:1080px;height:auto;">
+      </div>
+      <div class="col">
+        <p>
+          &emsp;ถัดมาอีกหน่อยแต่ยังอยู่ภายในบริเวณวัดท่าซุงนี้ จะพบ ปราสาททองคำ (กาญจนาภิเษก)  ก่อสร้างด้วยการก่ออิฐฉาบปูน ประดับลวดลายไทยปิดทองคำเปลวติดกระจก ใช้เป็นสถานที่ประดิษฐานพระพุทธรูปที่ญาติโยมถวาย รอบนอกปราสาทใช้ทองคำเปลวปิดรอบปราสาท
+           ซึ่งภายในบริเวณใก้ลเคียงนี้ยังมี พิพิธภัณฑ์   “สมบัติพ่อให้” อยู่ตรงข้ามกับ ปราสาททองคำ
+         </p>
+      </div>
+    </div>
+
+
+
+
+
 
 
   </p>
