--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
   <div class="container-fulid" id="about">
     <div class="row">
       <div class="col" id="view2">
-        <h1>เรื่องทั่วไป</h1>
+        <h1 class="appear">ประวัติจังหวัดเกือบจะไม่ลึก</h1>
+        <hr>
         <p>ดินแดนบางส่วนพบหลักฐานว่าเคยเป็นถิ่นที่อยู่อาศัยของมนุษย์ก่อนประวัติศาสตร์และเป็นที่ตั้งของเมือง โบราณ หลายเมืองในสมัยทวารวดี ตามตำนานกล่าวว่าในสมัยสุโขทัย
           ท้าวมหาพรหมได้เข้ามาสร้างเมืองที่บ้านอุทัยเก่า (อำเภอหนองฉาง) แล้วพาคนไทยมาอยู่ท่ามกลางหมู่บ้านกะเหรี่ยงและหมู่บ้านมอญ จึงเรียกว่า
           “เมืองอู่ไทย”ตาม กลุ่มหรือที่อยู่ของคนไทย ต่อมาเกิดน้ำแล้งกระแสน้ำเปลี่ยนทาง เมืองจึงถูกทิ้งร้าง ในสมัยกรุงศรีอยุธยาชาว กะเหรี่ยงชื่อ
