big change lelel

--- a/attractions/Phuwaicave.html
+++ b/attractions/Phuwaicave.html
@@ -31,7 +31,7 @@
       </p>
       </div>
       <div class="col">
-        <img src="../pic/ถ้ำพุหวาย2.jpg" alt="ถ้ำพุหวาย">
+        <img src="../pic/ถ้ำพุหวาย2.jpg" alt="ถ้ำพุหวาย" class="side-img">
       </div>
     </div>
     <div class="row">
@@ -43,6 +43,7 @@
       ถ้ำพญานาค เป็นถ้ำขนาดเล็กค่อนข้างลึกมีความสวยงามตามธรรมชาติของหินงอกหินย้อย
       หากเดินขึ้นไปยัง ยอดเขาพุหวาย สูงกว่า 700 เมตรจากระดับน้ำทะเล
       จะสามารถมองเห็นทัศนียภาพที่กว้างไกลอย่างสวยงาม บนสันเขามีสภาพเป็นป่าเต็งรังที่ค่อนข้างสมบูรณ์</p>
+      
     </div>
     </div>
 
