--- a/attractions/watKhaowong.html
+++ b/attractions/watKhaowong.html
@@ -14,7 +14,7 @@
 
   <!-- google font -->
   <link href="https://fonts.googleapis.com/css?family=Sriracha" rel="stylesheet">
-  
+
   <title>Document</title>
 
 </head>
@@ -25,18 +25,71 @@
   </div>
   <div class="information">
   <h1>แนะนำสถานที่</h1>
-  <p>&emsp;ถ้ำพุหวาย ตั้งอยู่ในเขตอุทยานแห่งชาติพุเตย เคยใช้เป็นสถานที่ถ่ายทำละครนาคี
-ภายในถ้ำจะพบภูเขาหินปูนสูงชันสลับซับซ้อน หินงอกหินย้อย หลากหลายแบบ อาทิ หินดอกเห็ด, หินย้อย,
-เสาโรมัน, ดอกไม้หิน, หินรูปหัวปลาโลมา,หินเกร็ดเพชร, หินงอกดอกกุหลาบ
-เป็นต้น อีกทั้งยังมีค้างคาวอาศัยอยู่ถึง 9 ชนิด และ พระพุทธรูป ที่ชาวบ้านและนักท่องเที่ยวเข้ามากราบไหว้
-</p>
-<p>&emsp;ทางด้านหลังของถ้ำพุหวาย คือ ถ้ำเทพมาลี หรือ
-ถ้ำพญานาค เป็นถ้ำขนาดเล็กค่อนข้างลึกมีความสวยงามตามธรรมชาติของหินงอกหินย้อย
-หากเดินขึ้นไปยัง ยอดเขาพุหวาย สูงกว่า 700 เมตรจากระดับน้ำทะเล
-จะสามารถมองเห็นทัศนียภาพที่กว้างไกลอย่างสวยงาม บนสันเขามีสภาพเป็นป่าเต็งรังที่ค่อนข้างสมบูรณ์</p>
+  <hr>
+  <div class="butto">
+    <button class="next" id="fst">ดูข้อมูลแต่ละชั้น</button>
+    <button class="next" id="snd"></button>
+  </div>
+  <div class="row" id="struct">
+    <div class="container-fulid" id="floor">
+      <div class="text">
+        <p>&emsp;วัดถ้ำเขาวง ดูเผินๆ ภายนอกจะเห็นเป็นเรือนไม้ขนาดใหญ่โอบล้อมด้วยเขาหินปูน เหมือนเป็นรีสอร์ทสวยงาม
+           ท่ามกลางบรรยากาศกำลังเย็นสบายๆ ของหน้าหนาว แต่ที่จริงแล้ว ที่นี่คือ “วัดถ้ำเขาวง” วัดทรงศาลพระภูมิ ผู้รู้ของเราบอกว่าถ้ามองดีๆ
+            ก็จะเหมือนกับศาลพระภูมิขนาดยักษ์ตั้งอยู่
+            โดยชั้นใต้ถุนจะใช้เป็นลานเอนกประสงค์ รวมทั้งร้านขายของต่างๆ
+        </p>
+      </div>
+        <img src="../pic/วัดถ้ำเขาวง2.jpg" alt="วัดถ้ำเขาวง" class="side-img">
+    </div>
+    <div class="col" id="floor">
+      <div class="col">
+        <p>&emsp;ชั้นที่ 2 เป็นวิหาร และมีรอยพระพุทธบาทจำลองให้เราไว้สักการะ
+        </p>
+      </div>
+      <div class="col">
+        <img src="../pic/วัดถ้ำเขาวง3.jpg" alt="วัดถ้ำเขาวง" class="side-img">
+      </div>
+    </div>
+    <div class="col" id="floor">
+      <div class="col">
+        <p>&emsp;สำหรับชั้นที่ 3 นั้นจะเป็นหออริยบูชาไว้สำหรับการปฏิบัติธรรม ส่วนอุโบสถจะอยู่ในชั้นที่ 4
+           นอกจากจะได้มาทำบุญ สักการะรอยพระพุทธบาทจำลองกันแล้ว เมื่อขึ้นมาถึงชั้นบนสุดซึ่งเป็นอุโบสถ ก็สามารถเห็นวิวสวยๆ
+          และรับลมหนาวได้อย่างเต็มปอดอีกด้วย
+        </p>
+      </div>
+      <div class="col">
+        <ul id="Slider" style="list-style-type:none;">
+          <li><img src="../pic/วัดถ้ำเขาวง4.jpg" alt="วัดถ้ำเขาวง" class="side-img" style="padding-top: 4vh;"></li>
+          <li><img src="../pic/วัดถ้ำเขาวง4_2.jpg" alt="วัดถ้ำเขาวง" class="side-img" style="padding-top: 4vh;"></li>
+        </ul>
+
+      </div>
+    </div>
+    <div class="col" id="floor">
+      <div class="col">
+        <p>&emsp;หลังวัดจะมีบันไดให้เราเดินขึ้นไปด้านบนเพื่อไปชมถ้ำต่างๆ ได้อีก ถ้ำที่อยู่หลังวัดจะเป็นถ้ำที่พุทธศาสนิกชนหลายๆ
+          คนมาเพื่อปฏิบัติธรรม ทำสมาธิ ได้อย่างสงบท่ามกลางธรรมชาติ
+          ทางที่เดินขึ้นไปบนถ้ำจะค่อนข้างลาดชันเล็กน้อย ใครที่อยากเข้ามาชมบรรยากาศตรงนี้อาจจะต้องสวมรองเท้าที่ค่อนข้างทะมัดทะแมงหน่อย
+          เพราะจะได้ฟีลแอดเวนเจอร์ผจญภัยในป่าเล็กๆ ตลอดตามทางจะมีธารน้ำตกเล็กๆ ไหลเอื่อยๆ จากภูเขาลงสู่บ่อน้ำที่ด้านล่าง ธรรมชาติมากๆ
+        </p>
+      </div>
+      <div class="col">
+        <ul id="Slider2" style="list-style-type:none;">
+          <li><img src="../pic/วัดถ้ำเขาวง5.jpg" alt="วัดถ้ำเขาวง" class="side-img" style="padding-top: 3vh;"></li>
+          <li><img src="../pic/วัดถ้ำเขาวง5_2.jpg" alt="วัดถ้ำเขาวง" class="side-img" style="padding-top: 4vh;"></li>
+        </ul>
+
+      </div>
+    </div>
+  </div>
+
+
+
   </div>
 
 <div class="map-frame">
+  <h1 style="text-align:center; font-size:4em;">แผนที่ click me and go!!</h1>
+  <hr>
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d174425.88754217266!2d99.4562137049531!3d14.975820758920188!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30e144a80508411d%3A0x686f23bd659b9065!2z4Lin4Lix4LiU4LiW4LmJ4Liz4LmA4LiC4Liy4Lin4LiH!5e0!3m2!1sth!2sth!4v1525010672759" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
 </div>
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
