--- a/attractions/watThasung.html
+++ b/attractions/watThasung.html
@@ -25,40 +25,68 @@
   </div>
   <div class="information">
     <h1>แนะนำสถานที่</h1>
-    <div class="row">
-      <div class="col">
-        <p>&emsp;วัดท่าซุง หรือ วัดจันทาราม จ.อุทัยธานี ชาวบ้านหรือแม้แต่คนอย่างเราๆก็มักจะเรียกติดปากว่า วัดท่าซุง
-          ซึ่งวัดแห่งนี้เป็นที่เลื่องชื่อในด้านความงดงาม ด้วยเอกลักษณ์อันโดดเด่นของ “วิหารแก้ว 100 เมตร” ที่ตกแต่งด้วยโมเสกแก้วเล็กๆทั้งวิหาร ทำให้ดูแวววับจับตา
-          วิจิตรงดงามยิ่งนัก ภายในวิหารแก้วนี้ มีโลงบรรจุองค์หลวงพ่อฤาษีลิงดำซึ่งชาวอุทัยธานีเคารพนับถือกันมานาน
-        </p>
+    <hr>
+    <div class="butto">
+      <button class="next" id="fst">ดูข้อมูลแต่ละชั้น</button>
+      <button class="next" id="snd"></button>
+    </div>
+    <div class="row" id="struct">
+      <div class="container-fulid" id="floor">
+        <div class="text">
+          <p>&emsp;วัดท่าซุง วัดที่มีชื่อเสียงและงดงามของเมืองอุทัยธานี วัดท่าซุง จริงแล้วเป็นวัดเก่าแก่ ที่สร้างตั้งแต่สมัยโดย หลวงพ่อใหญ่องค์แรก เป็นผู้สร้างวัดแต่วัดเริ่ม พัฒนาและเป็นที่รู้จักเมื่อพระราชมหาวีระ ถาวาโร (หลวงพ่อฤาษีลิงดำ) พระเถระที่มีชื่อเสียง ได้สร้างอาคารต่าง ๆ มากมาย เช่น พระอุโบสถใหม่ภายใน ประดับและตกแต่งอย่างวิจิตร บานหน้าต่างและประตูด้านในเขียนภาพเทวดา โดยจิตรกรฝีมือดี พระบาทสมเด็จพระเจ้าอยู่หัว เสด็จพระราชดำเนินมา ตัดลูกนิมิตพระอุโบสถแห่งนี้ บริเวณโดยรอบสร้างกำแพงแก้ว และมีรูปหล่อหลวงพ่อปาน และหลวงพ่อใหญ่ขนาด 3 เท่า อยู่มุมกำแพงด้านหน้ามณฑป และ พระวิหารแก้วที่ประดิษฐาน พระพุทธชินราชจำลอง และร่างของหลวงพ่อฤาษีลิงดำที่ไม่เน่าเปื่อย
+          </p>
+        </div>
+          <img src="../pic/วัดท่าซุง1.jpg" alt="วัดถ้ำเขาวง" class="side-img">
       </div>
-      <div class="col">
-        <img src="../pic/วิหารแก้ว 100 เมตร.jpg" alt="วิหารแก้ว 100 เมตร" class="center" style="width:1080px;height:auto;">
+      <div class="col" id="floor">
+        <div class="col">
+          <h2 style="float:left;">วิหารแก้ว 100 เมตร</h2>
+          <br>
+          <p>&emsp;เป็นวิหารสำคัญที่หลวงพ่อฤๅษีลิงดำสร้างไว้ก่อนมรณะภาพรวมทั้งยังเป็นที่รักษาสังขารร่างของหลวงพ่อที่ไม่เน่าเปื่อยในโลงแก้ว  ภายในสร้างด้วยโมเสก สีขาว ใสดูเหมือนแก้ววาววับ นอกจากนี้ยังมีพระพุทธรูปจำลองพระพุทธชินราชซึ่งเป็นพระประทานในวิหาร อีกด้วย
+            วิหารแก้วจะเปิดให้ชมเป็นช่วงเวลา คือ ช่วงเช้า ตั้งแต่ 9.00-11.45 น .และช่วงบ่าย 14.00-16.00 น.
+          </p>
+        </div>
+        <div class="col">
+          <img src="../pic/วิหารแก้ว 100 เมตร.jpg" alt="วัดถ้ำเขาวง" class="side-img">
+        </div>
+      </div>
+      <div class="col" id="floor">
+        <div class="col">
+          <h2 style="float:left;">ปราสาททองคำ</h2>
+          <br>
+          <p>&emsp;ตกแต่งด้วยทองคำตระกาลตา สร้างด้วยฝีมือที่ประณีตงดงาม ปราสาททองคำ (กาญจนาภิเษก)ที่มาของคำว่า ปราสาททองคำ (กาญจนาภิเษก)
+            สร้างเพื่อ ถวายเป็นพระราชกุศลแด่พระบาทสมเด็จพระเจ้าอยู่หัว ในวาระที่ ทรงเสวยราชย์เป็นปีที่ 50 และทาง สำนักพระราชวังได้ให้ชื่อปราสาททองคำใหม่ว่า
+            "ปราสาททองกาญจนาภิเษก" ปราสาททองคำ ก่อสร้างด้วยการก่ออิฐฉาบปูน ประดับลวดลายไทยปิดทองคำเปลวติดกระจกใช้เป็นสถานที่ประดิษฐาน
+            พระพุทธรูปที่ญาติโยมถวายรอบนอกปราสาท ใช้ทองคำเปลวปิดรอบปราสาทภายในปราสาทเป็นที่ประดิษฐานสิ่งของสำคัญต่างๆ
+          </p>
+        </div>
+        <div class="col">
+          <img src="../pic/วัดท่าซุง2.jpg" alt="วัดถ้ำเขาวง" class="side-img">
+        </div>
+      </div>
+      <div class="col" id="floor">
+        <div class="col">
+          <p>&emsp;นอกจากนี้ภายในวัดท่าซุงยังมีจุดแวะชมที่น่าสนใจหลายแห่ง เช่น มณฑปพระปัจเจกพระพุทธเจ้า พระศรีอาริเมตตรัย วิหารสมเด็จองค์ปฐม หอพระไตรปิฏก
+            <br>หลวงพ่อเงินไหลมาเทมาเจดีย์พุดตาน มณฑปและวิหารอยู่ หลายแห่งแต่ละแห่งมักจะ ติดวัสดุกระจกและล้อมรอบด้วยแก้วใส ส่วนยอดจะสร้างในลักษณะเดียวกัน
+          </p>
+        </div>
+        <div class="col">
+          <ul id="Slider" style="list-style-type:none;">
+            <li><img src="../pic/วัดท่าซุง4_1.jpg" alt="วัดถ้ำเขาวง" class="side-img"></li>
+            <li><img src="../pic/วัดท่าซุง4_2.jpg" alt="วัดถ้ำเขาวง" class="side-img"></li>
+            <li><img src="../pic/วัดท่าซุง4_3.jpg" alt="วัดถ้ำเขาวง" class="side-img"></li>
+          </ul>
+
+        </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col">
-        <img src="../pic/ปราสาททองคำ (กาญจนาภิเษก).jpg" alt="ปราสาททองคำ (กาญจนาภิเษก)" class="center" style="width:1080px;height:auto;">
-      </div>
-      <div class="col">
-        <p>
-          &emsp;ถัดมาอีกหน่อยแต่ยังอยู่ภายในบริเวณวัดท่าซุงนี้ จะพบ ปราสาททองคำ (กาญจนาภิเษก)  ก่อสร้างด้วยการก่ออิฐฉาบปูน ประดับลวดลายไทยปิดทองคำเปลวติดกระจก ใช้เป็นสถานที่ประดิษฐานพระพุทธรูปที่ญาติโยมถวาย รอบนอกปราสาทใช้ทองคำเปลวปิดรอบปราสาท
-           ซึ่งภายในบริเวณใก้ลเคียงนี้ยังมี พิพิธภัณฑ์   “สมบัติพ่อให้” อยู่ตรงข้ามกับ ปราสาททองคำ
-         </p>
-      </div>
-    </div>
-
-
-
-
-
-
 
   </p>
   </div>
 
   <div class="map-frame">
-    <h1 style="text-align:center; font-size:4em;">แผนที่</h1>
+    <h1 style="text-align:center; font-size:4em;">แผนที่ click me and go!!</h1>
+    <hr>
     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3847.831190323224!2d100.0744544732941!3d15.33140643051095!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30e1a52ef86bd2a5%3A0x51ced280d3891aa1!2z4Lin4Lix4LiU4LiI4Lix4LiZ4LiX4Liy4Lij4Liy4LihICjguKfguLHguJTguJfguYjguLLguIvguLjguIcp!5e0!3m2!1sth!2sth!4v1525009760137" class="map" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
   </div>
 
