--- a/index.html
+++ b/index.html
@@ -39,14 +39,9 @@
 
   <div class="container-fulid" id="about">
     <div class="row">
-<<<<<<< Updated upstream
       <div class="col" id="view2">
         <h1 class="appear">ประวัติจังหวัดเกือบจะไม่ลึก</h1>
         <hr>
-=======
-      <div id="view2">
-        <h1>เรื่องทั่วไป</h1>
->>>>>>> Stashed changes
         <p>ดินแดนบางส่วนพบหลักฐานว่าเคยเป็นถิ่นที่อยู่อาศัยของมนุษย์ก่อนประวัติศาสตร์และเป็นที่ตั้งของเมือง โบราณ หลายเมืองในสมัยทวารวดี ตามตำนานกล่าวว่าในสมัยสุโขทัย
           ท้าวมหาพรหมได้เข้ามาสร้างเมืองที่บ้านอุทัยเก่า (อำเภอหนองฉาง) แล้วพาคนไทยมาอยู่ท่ามกลางหมู่บ้านกะเหรี่ยงและหมู่บ้านมอญ จึงเรียกว่า
           “เมืองอู่ไทย”ตาม กลุ่มหรือที่อยู่ของคนไทย ต่อมาเกิดน้ำแล้งกระแสน้ำเปลี่ยนทาง เมืองจึงถูกทิ้งร้าง ในสมัยกรุงศรีอยุธยาชาว กะเหรี่ยงชื่อ
@@ -55,17 +50,17 @@
           ต่อมาในสมัยกรุงรัตนโกสินทร์ตอนต้นมีการ อพยพผู้คน มาตั้งบ้านเรือนที่ริมฝั่งแม่น้ำสะแกกรังมากขึ้น และได้กลายเป็นที่ตั้งของตัวเมืองอุทัยธานีในปัจจุบัน
           อุทัยธานีมีสถานที่น่าสนใจทางธรรมชาติ ประวัติศาสตร์ และโบราณคดีหลายแห่งที่น่าเที่ยวชมและศึกษาหาความรู้</p>
       </div>
-      <div class="slogan">
+<!--       <div class="slogan">
         <h1>คำขวัญจังหวัด</h1>
         <h3>“อุทัยธานี เมืองพระชนกจักรี ปลาแรดรสดี ประเพณีเทโว ส้มโอบ้านน้ำตก”
           <br>มรดกโลกห้วยขาแข้ง แหล่งต้นน้ำสะแกกรัง ตลาดนัดดังโคกระบือ</h3>
-      </div>
+      </div> -->
     </div>
   </div>
 
 
   <div class="container-fulid" id="attractions">
-    <h1>สถานที่ท่องเที่ยว</h1>
+    <h1 class="appear">สถานที่ท่องเที่ยว</h1>
     <div class="row" id="mapping">
       <!-- attraction1 -->
       <div class="col attraction-div" id="place1">
