--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="col" id="view2">
         <h1 class="appear">ประวัติจังหวัดเกือบจะไม่ลึก</h1>
         <hr>
-        <p>ดินแดนบางส่วนพบหลักฐานว่าเคยเป็นถิ่นที่อยู่อาศัยของมนุษย์ก่อนประวัติศาสตร์และเป็นที่ตั้งของเมือง โบราณ หลายเมืองในสมัยทวารวดี ตามตำนานกล่าวว่าในสมัยสุโขทัย
+        <p class="appear">ดินแดนบางส่วนพบหลักฐานว่าเคยเป็นถิ่นที่อยู่อาศัยของมนุษย์ก่อนประวัติศาสตร์และเป็นที่ตั้งของเมือง โบราณ หลายเมืองในสมัยทวารวดี ตามตำนานกล่าวว่าในสมัยสุโขทัย
           ท้าวมหาพรหมได้เข้ามาสร้างเมืองที่บ้านอุทัยเก่า (อำเภอหนองฉาง) แล้วพาคนไทยมาอยู่ท่ามกลางหมู่บ้านกะเหรี่ยงและหมู่บ้านมอญ จึงเรียกว่า
           “เมืองอู่ไทย”ตาม กลุ่มหรือที่อยู่ของคนไทย ต่อมาเกิดน้ำแล้งกระแสน้ำเปลี่ยนทาง เมืองจึงถูกทิ้งร้าง ในสมัยกรุงศรีอยุธยาชาว กะเหรี่ยงชื่อ
           “พะตะเบิด” เข้ามาปรับปรุงเมืองอู่ไทย โดยขุดทะเลสาบขังน้ำไว้ใกล้เมืองและเป็นผู้ปกครองเมือง อู่ไทยคนแรก ชื่อเมือง จึงเรียกเพี้ยนเป็น
@@ -50,11 +50,11 @@
           ต่อมาในสมัยกรุงรัตนโกสินทร์ตอนต้นมีการ อพยพผู้คน มาตั้งบ้านเรือนที่ริมฝั่งแม่น้ำสะแกกรังมากขึ้น และได้กลายเป็นที่ตั้งของตัวเมืองอุทัยธานีในปัจจุบัน
           อุทัยธานีมีสถานที่น่าสนใจทางธรรมชาติ ประวัติศาสตร์ และโบราณคดีหลายแห่งที่น่าเที่ยวชมและศึกษาหาความรู้</p>
       </div>
-<!--       <div class="slogan">
+      <div class="slogan appear">
         <h1>คำขวัญจังหวัด</h1>
         <h3>“อุทัยธานี เมืองพระชนกจักรี ปลาแรดรสดี ประเพณีเทโว ส้มโอบ้านน้ำตก”
           <br>มรดกโลกห้วยขาแข้ง แหล่งต้นน้ำสะแกกรัง ตลาดนัดดังโคกระบือ</h3>
-      </div> -->
+      </div>
     </div>
   </div>
 
